tests/trybuild/two_enums_same_name.stderr
error: 'X' already exists as an error enum.
  --> tests/trybuild/two_enums_same_name.rs:3:1
   |
3  | / error_set!(
4  | |     SetLevelError {
5  | |         X {
6  | |         IoError2,
...  |
11 | |     }
12 | | );
   | |_^
   |
   = note: this error originates in the macro `error_set` (in Nightly builds, run with -Z macro-backtrace for more info)
